# ec-darkpattern

./: README.md
crawler_typescript/: .gitignore  .prettierrc  .sendignore  README.md
crawler_typescript/dataset/darkpatterns/: darkpattern.csv
crawler_typescript/src/: scrape-page.ts
crawler_typescript/src/scraping-tools/: Scraper.ts
crawler_typescript/src/utils/: directory.ts
darkpattern-auto-detection-classical/: .gitignore  README.md  pyproject.toml
darkpattern-auto-detection-classical/configs/: config.yaml
darkpattern-auto-detection-classical/const/: model.py  path.py
darkpattern-auto-detection-classical/experiments/: train.py
darkpattern-auto-detection-classical/scripts/: train.sh
darkpattern-auto-detection-classical/utils/: dataset.py  random_seed.py  text.py
darkpattern-auto-detection-deeplearning/: .gitignore  README.md  mypy.ini  pyproject.toml
darkpattern-auto-detection-deeplearning/configs/: config.yaml
darkpattern-auto-detection-deeplearning/const/: path.py
darkpattern-auto-detection-deeplearning/dataset/: dataset.tsv
darkpattern-auto-detection-deeplearning/experiments/: train.py
darkpattern-auto-detection-deeplearning/figures/: .gitkeep
darkpattern-auto-detection-deeplearning/models/nn/: __init__.py  bert.py
darkpattern-auto-detection-deeplearning/scripts/: train.sh
darkpattern-auto-detection-deeplearning/trainer/: trainer.py
darkpattern-auto-detection-deeplearning/utils/: dataset.py  text.py  uuid.py
scraping/: .eslintrc.js  README.md  package.json  tsconfig.json
scraping/src/const/: env.ts  path.ts
(+8 files in other folders)
