[tool.poetry]
name = "darkpattern_auto_detection_classical"
version = "0.1.0"
description = ""
authors = ["YadaYuki <yada.yuki@fuji.waseda.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.1.1"
lightgbm = "^3.3.2"
pandas = "1.2.0"
hydra-core = "^1.2.0"
wandb = "^0.12.21"
nltk = "^3.7"
optuna = "^2.10.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
